Add java.lang.foreign (Panama) PinotDataBuffer implementation
Add an opt-in off-heap buffer implementation backed by the Foreign
Function & Memory API (MemorySegment/Arena) in a new Java 25 module
pinot-segment-spi-foreign, as an alternative to the sun.misc.Unsafe
based buffer. It is selected via the pinot.offheap.buffer.factory
config or the PINOT_BUFFER_LIBRARY environment variable; the default
(Unsafe wrapped in SmallWithFallback) is unchanged.

The code lives in a separate module so that pinot-segment-spi can stay
Java 11 bytecode for the JDBC/Java driver dependency closure
(pinot-jdbc-client -> pinot-java-client -> pinot-common ->
pinot-segment-spi), while the FFM code (which requires Java 21+) is
compiled at Java 25.

Also extend pinot-perf: BenchmarkPinotDataBuffer gains foreign options
and BenchmarkQueriesSSQE gains an opt-in _bufferLibrary parameter to
compare backends end-to-end.